objects/Key_Code__c.object
<CustomObject>
    <fields>
        <fullName>Key_Code_Status__c</fullName>
        <label>Key Code Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Core_Type__c</fullName>
        <label>Key Core Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Key_Core__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main Door</fullName>
                </value>
                <value>
                    <fullName>BV Door</fullName>
                </value>
                <value>
                    <fullName>Redemption Door</fullName>
                </value>
                <value>
                    <fullName>Main CPU</fullName>
                </value>
                <value>
                    <fullName>Removal MD</fullName>
                </value>
                <value>
                    <fullName>Removal BV</fullName>
                </value>
                <value>
                    <fullName>Removal RT</fullName>
                </value>
                <value>
                    <fullName>Removal CPU</fullName>
                </value>
                <value>
                    <fullName>Core Cut MD</fullName>
                </value>
                <value>
                    <fullName>Core Cut BV</fullName>
                </value>
                <value>
                    <fullName>Core Cut RT</fullName>
                </value>
                <value>
                    <fullName>Core Cut CPU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Core__c</fullName>
        <label>Key Core</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main Core</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
                <value>
                    <fullName>Core Cut</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Key Codes</relationshipLabel>
        <relationshipName>Key_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Key_Code_Status__c</columns>
        <columns>Key_Core__c</columns>
        <columns>Key_Core_Type__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Key_Codes</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All Key Codes</label>
    </listViews>
    <nameField>
        <label>Key Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>